Fix: minor fixes
